unpackaged-source/main/default/objects/Subscription__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Before trigger controls this field.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>