unpackaged-source/main/default/objects/Subscription__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Date the subscription ends</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>